# Estrutura_de_Projeto

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
api/: index.html
app/: main.py
app/pipeline/: extract.py  pipeline.py  transform.py
app/utils/: absenteeism_generator.py
docs/: index.md
search/: search_index.json
tests/: test_integration.py  test_unitarios.py
