[tool.poetry]
name = "estrutura-de-projetos"
version = "0.1.0"
description = "Meu Primeiro ETL"
authors = ["Eric Petterson <ericpl.ff@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.1"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
