[tool.poetry]
name = "estrutura-de-projetos"
version = "0.1.0"
description = "Meu Primeiro ETL"
authors = ["Eric Petterson <ericpl.ff@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.1"
pytest = "^8.1.1"
isort = "^5.13.2"
blue = "^0.9.1"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "blue"
known_third_party = []

[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"
